--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
+    "save": "^2.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
