--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
+    "ngx-bootstrap": "^8.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "save": "^2.9.0",
