--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.0",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
     "ngx-bootstrap": "^8.0.0",
     "popper.js": "^1.16.1",
-    "rxjs": "~7.4.0",
     "save": "^2.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -37,6 +38,7 @@
     "@angular-devkit/build-angular": "~13.1.1",
     "@angular/cli": "~13.1.1",
     "@angular/compiler-cli": "~13.1.0",
+    "@angular/localize": "^13.1.3",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.13",
